# ydb-c

./: .gitignore  Makefile  README.md  debug.txt  ydb_header.h
c_client/: client.c  client_go_dynamic
c_interface/: interface.h  ydb_interface.h
cython_extension/: ydb_c.c  ydb_c.pxd  ydb_c.pyx
cython_ydb_extension/: MANIFEST.in  cython_ydb_extension.c  cython_ydb_extension.pyx  setup.py  ydb_c.pxd
go/: c_bind.c  c_bind.go  call.go  connect.go  go.mod  go.sum  storage.go
go_client/: go.mod  go.sum  go_topic_client.go
go_for_python/: c_bind.go  c_bind_python.c  c_bind_python.go  c_bind_python.h  converts.go  go.mod  go.sum  pointer.go  query.go  ydb_interface.h
go_for_python/python3.8_headers/: pyconfig.h
python_client/: client.py  client_topic.py  init.py
rust_ydb_client/: Cargo.toml  ydb_interface.h
rust_ydb_client/src/: c_bind.rs  call.rs  connect.rs  errors.rs  lib.rs  pointer.rs  query.rs  runtime.rs
