[package]
publish = false
name = "rust_ydb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","staticlib"]

[dependencies]
ydb="0.6.2"

[dependencies.tokio]
version = "1.18"
features = ["full"]
